syntax = "proto3";

option go_package = "./grpcHello";

package grpcHello;

message HelloRequest {
  string name = 1;
  uint64 with_idle_seconds = 2;
}

message HelloResponse {
  string message = 1;
}

service GrpcHello {
  rpc Hello(HelloRequest) returns (HelloResponse) {};
}